comecei a escrever o conteúdo

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,19 +7,19 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dicta dolorem dolores esse explicabo harum vero voluptatibus! Assumenda commodi culpa dicta dolorem dolorum eos est eum illo iusto, nam officiis quam quas qui quod quos ratione rem repellat reprehenderit, sed suscipit. Ab deleniti odit quae quos? Consectetur cum error itaque.</p>
         </article>
 
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque esse et excepturi expedita laudantium molestiae mollitia recusandae, voluptatum. Adipisci aperiam asperiores dolorum id necessitatibus obcaecati officiis quam ratione. In, minus!</p>
         </article>
-        
+
     </main>
 </body>
 </html>
