--- a/index.html/index.html
+++ b/index.html/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Título do Site</title>
+    <title>Curso em Video</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
